force-app/main/default/objects/Market_Rate__c/Market_Rate__c.object-meta.xml
<CustomObject>
    <description>Holds the markets mortgage rate for a given day. Updated via API call daily.</description>
    <label>Market Rate</label>
    <nameField>
        <label>Market Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>