force-app/main/default/objects/Market_Rate__c/fields/Mortgage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Rate__c</fullName>
    <description>Daily updated Mortgage Rate</description>
    <inlineHelpText>Annual rate as published by FRED (e.g. 6.72 = 6.72%). Divide by 100 before use in calculations.</inlineHelpText>
    <label>Mortgage Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>