force-app/main/default/objects/Market_Rate__c/fields/Observation_Date__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date__c</fullName>
    <description>Date the rate value was observed by FRED API</description>
    <label>Observation Date</label>
    <type>Date</type>
</CustomField>