force-app/main/default/objects/Market_Rate__c/fields/Rate_Key__c.field-meta.xml
<CustomField>
    <fullName>Rate_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id for the Market Rate object for idempotency</description>
    <externalId>true</externalId>
    <label>Rate Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>